// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Box Background colour 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 gjygQu"
  data-testid={null}
>
  <p
    className="Typography__P-sc-1613j99-6 cdYHMX"
  >
    This is a Box that has background colour set to 
    <code>
      greyLightest
    </code>
    .
  </p>
</div>
`;

exports[`Storyshots Components/Box Border Box 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 bSlncV"
  data-testid={null}
>
  <p
    className="Typography__P-sc-1613j99-6 cdYHMX"
  >
    This is a variant of a Box with a border.
  </p>
</div>
`;

exports[`Storyshots Components/Box Default Box 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 kEyhLZ"
  data-testid={null}
>
  <p
    className="Typography__P-sc-1613j99-6 cdYHMX"
  >
    This is an example of the basic Box with no properties applied to it.
  </p>
</div>
`;

exports[`Storyshots Components/Box Drop shadow 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 bfcBxi"
  data-testid={null}
>
  <p
    className="Typography__P-sc-1613j99-6 cdYHMX"
  >
    This is a variant of a Box with a slight drop shadow.
  </p>
</div>
`;

exports[`Storyshots Components/Box Padding 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ekPEiH"
  data-testid={null}
>
  <p
    className="Typography__P-sc-1613j99-6 cdYHMX"
  >
    This is a bordered Box variant with specified padding that overrides the default padding value.
  </p>
</div>
`;

exports[`Storyshots Components/Box Rounded corners 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 koCKa-D"
  data-testid={null}
>
  <p
    className="Typography__P-sc-1613j99-6 cdYHMX"
  >
    This is a bordered Box variant with rounded corners.
     
    <code>
      borderRadius
    </code>
     is taken from the 
    <code>
      radii
    </code>
     array in
     
    <code>
      systemtheme.js
    </code>
    .
  </p>
</div>
`;
